# Sassy-AI

./: Cargo.toml
src/: gpt.rs  main.rs  record.rs  transcribe.rs
