[package]
name = "sassy-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.5.1"
reqwest = { version = "0.12.3", features = ["blocking"] }
serde_json = "1.0.115"
tts = "0.26.0"
whisper-rs = "0.11.1"
pv_recorder = "1.2.2"
mki = "0.2.3"
